* dpost: Cast size_t arguments to long for printf (Stefan Tramm).
* The reference manual now uses the free TeX Gyre Termes fonts available
  from <http://www.janusz.nowacki.strefa.pl/>. For this and the other
  documentation texts, README files have been added to explain which
  fonts are needed in order to build them. (Thanks to Werner Lemberg for
  notification.)

Release 061212
* [nt]roff: Relative numbers can be used with the ".pshape" request now;
  they refer to the preceding indent and line length pair, or, for the
  initial pair, to the standard indent and line lenght settings.
* [nt]roff: A warning of the "range" category is now printed when the
  indent is set to a value exceeding the line length.
* troff: In ".ad p" mode, when a line break was inserted after an
  existing hyphen or em dash, another hyphen was added when the previous
  characters formed a kerning pair. This has been fixed.
* troff: In ".ad p" mode, when the character before the first interword
  space formed a kerning pair with the space character, the line length
  was incorrectly computed, and the line was prolongated by this amount.
  This has been fixed.
* troff: The "\{", "\}", and "\x" escape sequences inhibited kerning in
  the adjustment computation but not in the output routine, which could
  lead to prolongated output lines. They now inhibit kerning completely.
* eqn: Generated equations no longer start with "\x'0'". This allows
  kerning with the preceding character in an inline equation.
* nroff: The content of a "\X" function is now ignored (instead of being
  printed with zero width).
* nroff: Combining UTF-8 characters are now assumed to have width zero.
* nroff: The ".rd" request has been fixed; it had not been working since
  the last release.
* troff: The ".rd" request now accepts locale-dependent input characters.
* [nt]roff: Fixed an error in ".ad p" mode which could lead to core dumps
  with ".ev" requests that were not properly paired.