@@ -8,10 +8,10 @@
 .\"
 .\" Distributed under the terms of the Lucent Public License Version 1.02.
 .\"
-.\" Sccsid @(#)grap.1b	1.4 (gritter) 12/5/05
-.TH GRAP 1B "12/5/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.\" Sccsid @(#)grap.1	1.5 (gritter) 2/2/07
+.TH GRAP 1 "2/2/07" "Heirloom Documentation Tools" "User Commands"
 .SH NAME
-grap \- (BSD) pic preprocessor for drawing graphs
+grap \- pic preprocessor for drawing graphs
 .SH SYNOPSIS
 \fB/usr/ucb/grap\fR [\fB\-SU\fR] [\fIfile\fR]
 .SH DESCRIPTION
@@ -420,7 +420,7 @@ definitions of standard plotting characters, e.g., bullet
 .\".SH SOURCE
 .\".B /sys/src/cmd/grap
 .SH "SEE ALSO"
-.IR pic (1B), 
+.IR pic (1), 
 .IR troff (1B)
 .br
 J. L. Bentley and B. W. Kernighan,
